用户管理查询分页

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -8,7 +8,7 @@
     <div class="jumbotron" style="padding-left: 400px">
         <h1>出错了！</h1>
         <p th:text="${message}"></p>
-        <p><a class="btn btn-primary btn-lg" href="/" role="button">返回</a></p>
+        <!--<p><a class="btn btn-primary btn-lg" href="/" role="button">返回</a></p>-->
     </div>
 </body>
 </html>
