--- a/src/main/resources/templates/userMgt.html
+++ b/src/main/resources/templates/userMgt.html
@@ -17,7 +17,18 @@
             </div>
 
             <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 ztstyle">
-                <h4>用户管理</h4>
+                <div>
+                     <h4>用户管理
+                        <nav style="float: right;margin-bottom: 6px">
+                            <form action="/usersearch" class="form-inline">
+                                <div class="form-group">
+                                    <input type="text" class="form-control" name="userAccountId" placeholder="账号">
+                                </div>
+                                <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
+                            </form>
+                        </nav>
+                     </h4>
+                </div>
                 <table class="table table-striped">
                     <tr>
                         <td>ID</td>
