--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -8,7 +8,7 @@
             <li role="presentation" class="active"><a href="#" class="barstyle dtstyle"><h3 style="margin-top: 13px;">后台管理系统</h3></a></li>
             <li role="presentation"><a href="/usermgt" class="barstyle"><h4>用户管理</h4></a></li>
             <li role="presentation"><a href="/topicmgt" class="barstyle"><h4>话题管理</h4></a></li>
-            <li role="presentation"><a href="#" class="barstyle"><h4>评论管理</h4></a></li>
+            <li role="presentation"><a href="/commentmgt" class="barstyle"><h4>评论管理</h4></a></li>
             <li role="presentation"><a href="logout" class="barstyle"><h4>退出登陆</h4></a></li>
         </ul>
     </nav>
